--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@
 }
 
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
+  font-family: 'Atkinson Hyperlegible Bold';
   src: url('/assets/fonts/subset-AtkinsonHyperlegible-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
-
+  
 :root {
   --color-primary: #005A9C;      /* Bleu accessible */
   --color-secondary: #D6EAF8;    /* Bleu clair (header/footer) */
@@ -24,6 +24,7 @@
   --color-black: #000000;
 
   --font-base: 'Atkinson Hyperlegible', sans-serif;
+  --font-bold: 'Atkinson Hyperlegible Bold', sans-serif;
 
   --text-h1: 2.5rem;   /* 40px */
   --text-h2: 2rem;     /* 32px */
@@ -37,16 +38,16 @@
 
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   box-sizing: border-box;
 }
 
 html {
   font-size: 100%; /* 1rem = 16px */
+  line-height: var(--lh-default);
 }
 
 body {
-
   font-family: 'Atkinson Hyperlegible', sans-serif;
   font-size: var(--text-body);
   line-height: var(--lh-default);
@@ -78,7 +79,7 @@ h3 {
 h4, h5 {
   font-size: var(--text-h4);
   line-height: var(--lh-default);
-  font-weight: 700;
+  font-weight: 300;
   margin-bottom: 0.5rem;
 }
 
@@ -90,8 +91,7 @@ p {
 }
 
 a {
-  color: var(--color-primary);
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 a:focus {
@@ -103,7 +103,7 @@ header, footer {
   background-color: var(--color-secondary);
   color: var(--color-black);
   padding: 2rem;
-  border-top: 2px solid #005A9C;
+  border-bottom: 2px solid #005A9C;
 }
 
 p + p {
@@ -111,6 +111,64 @@ p + p {
 }
 
 body {
-  letter-spacing: 0.02em; /* ~0.12x font-size */
+  letter-spacing: 0.02em;
   word-spacing: 0.16em;
+}
+
+
+.container {
+  margin: 0 auto;
+  padding: 0 0rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.nav ul {
+  color: #000000;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  
+  display: flex;
+  gap: 1.5rem;
+  align-items: center;
+}
+
+.nav a{
+  color: #000000;
+  font-size: var(--text-h3);
+
+}
+
+/*logo*/
+.site-name {
+  font-size: var(--text-h3);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.site-subtitle {
+  display: inline-block;
+  font-weight: bold;
+  font-family: var(--font-bold);
+  letter-spacing: 0.3rem;
+  font-size: var(--text-h2);
+  margin-top: 0.25rem;
+}
+
+.logo-icon {
+  height: 4.8rem;
+  width: 4.8rem;
+  margin-right: 0.5rem;
+}
+
+.logo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
