--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
       <span aria-hidden="true" class="logo-icon">GNA</span>
       <div class="site-name">
         <span class="site-title">Mon Petit</span><br />
-        <span class="site-subtitle">Geste</span>
+        <span class="site-subtitle"><strong>Geste</strong></span>
       </div>
     </div>
 
