--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,28 @@ body {
   background-color: #f0f2f5;
   margin: 0;
   padding: 0;
+  min-height: 100%;
 }
+
 main {
   padding: 2rem;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 20px;
+}
+
+.card {
+  grid-template-rows: max-content 200px 1fr;
+  background-color: #005A9C;
+  color: white;
+  width: 100%;
+
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
