--- a/src/css/index.css
+++ b/src/css/index.css
@@ -18,10 +18,11 @@ main {
 
 .card {
   grid-template-rows: max-content 200px 1fr;
-  background-color: #005A9C;
+  background-color: #005a9c;
   color: white;
   width: 100%;
-
+  border-radius: 24px;
+  padding: 2rem;
 }
 
 a {
