--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,6 +25,12 @@ main {
   padding: 2rem;
 }
 
+.card a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 a {
   text-decoration: none;
   color: white;
