--- a/src/css/base.css
+++ b/src/css/base.css
@@ -87,7 +87,7 @@ p {
   font-size: var(--text-body);
   line-height: var(--lh-default);
   /* margin-bottom: 1.5rem; */
-  max-width: 65ch;
+  /* max-width: 65ch; */
 }
 
 a {
@@ -273,3 +273,28 @@ footer ul {
   gap: 20px;
 }
 
+/* section_card */
+
+.section-container {
+  background-color: #005A9C;
+  color: #FFFFFF;
+  width: 100%;
+  border-radius: 24px;
+  padding: 1rem;
+}
+
+.section-icon {
+  color: #FFFFFF;
+}
+
+.section-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.section-text {
+  width: 100%;
+  text-align: center;
+}
