--- a/src/html/components/description_card.html
+++ b/src/html/components/description_card.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon Petit Geste</title>
-    <link rel="stylesheet" href="../base.css" />
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../../css/index.css">
   </head>
 
   <body>
