--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,24 +16,33 @@
   font-display: swap;
 }
 
-  
+
 :root {
-  --color-primary: #005A9C;      /* Bleu accessible */
-  --color-secondary: #D6EAF8;    /* Bleu clair (header/footer) */
+  --color-primary: #005A9C;
+  /* Bleu accessible */
+  --color-secondary: #D6EAF8;
+  /* Bleu clair (header/footer) */
   --color-white: #FFFFFF;
   --color-black: #000000;
 
   --font-base: 'Atkinson Hyperlegible', sans-serif;
   --font-bold: 'Atkinson Hyperlegible Bold', sans-serif;
 
-  --text-h1: 2.5rem;   /* 40px */
-  --text-h2: 2rem;     /* 32px */
-  --text-h3: 1.5rem;   /* 24px */
-  --text-h4: 1.25rem;  /* 20px */
-  --text-h5: 1.25rem;  /* 20px */
-  --text-body: 1rem;   /* 16px */
+  --text-h1: 2.5rem;
+  /* 40px */
+  --text-h2: 2rem;
+  /* 32px */
+  --text-h3: 1.5rem;
+  /* 24px */
+  --text-h4: 1.25rem;
+  /* 20px */
+  --text-h5: 1.25rem;
+  /* 20px */
+  --text-body: 1rem;
+  /* 16px */
 
-  --lh-default: 1.5rem; /* 24px */
+  --lh-default: 1.5em;
+  /* 24px */
 }
 
 * {
@@ -43,7 +52,8 @@
 }
 
 html {
-  font-size: 100%; /* 1rem = 16px */
+  font-size: 100%;
+  /* 1rem = 16px */
   line-height: var(--lh-default);
 }
 
@@ -76,7 +86,8 @@ h3 {
   margin-bottom: 0.5rem;
 }
 
-h4, h5 {
+h4,
+h5 {
   font-size: var(--text-h4);
   line-height: var(--lh-default);
   font-weight: 300;
@@ -106,7 +117,7 @@ header {
   border-bottom: 2px solid #005A9C;
 }
 
-p + p {
+p+p {
   margin-top: 2rem;
 }
 
@@ -131,13 +142,13 @@ body {
   list-style: none;
   margin: 0;
   padding: 0;
-  
+
   display: flex;
   gap: 1.5rem;
   align-items: center;
 }
 
-.nav a{
+.nav a {
   color: #000000;
   font-size: var(--text-h3);
 
@@ -174,7 +185,7 @@ body {
 }
 
 
-footer{
+footer {
   height: 256px;
   width: 100%;
   background-color: var(--color-secondary);
@@ -186,10 +197,10 @@ footer{
   font-size: var(--text-h3);
   font-family: 'Atkinson Hyperlegible', sans-serif;
   padding: 0 2rem;
-  
+
 }
 
-.footer-lien{
+.footer-lien {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -200,7 +211,7 @@ footer{
   flex-wrap: wrap;
 }
 
-footer a{
+footer a {
   color: var(--color-black);
   text-decoration: none;
 }
@@ -217,7 +228,7 @@ footer ul {
   align-items: center;
 }
 
-.logo-container{
+.logo-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -247,17 +258,17 @@ footer ul {
 
 @media screen and (max-width: 850px) {
   footer {
-      flex-direction: column;
-      height: 350px;
+    flex-direction: column;
+    height: 350px;
   }
 
-  .footer-lien{
-      width: 100%;
+  .footer-lien {
+    width: 100%;
   }
 }
 
 /* description_card */
-.description_card_border{
+.description_card_border {
   padding: 1rem;
   border: 2px solid var(--color-primary);
   border-radius: 24px;
@@ -266,10 +277,10 @@ footer ul {
   gap: 20px;
   align-items: center
 }
+
 .description_card_content {
   display: flex;
   flex-direction: column;
   width: 100%;
   gap: 20px;
 }
-
