--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,12 +12,13 @@ main {
 
 .cards {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 10%;
+  grid-row-gap: 0px;
 }
 
 .card {
-  grid-template-rows: max-content 200px 1fr;
   background-color: #005a9c;
   color: white;
   width: 100%;
@@ -34,4 +35,9 @@ main {
 a {
   text-decoration: none;
   color: white;
+}
+
+main h1,
+h2 {
+  text-align: center;
 }
