--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,19 +11,20 @@ main {
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr;
-  grid-column-gap: 10%;
-  grid-row-gap: 0px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  gap: 1rem;
 }
 
 .card {
   background-color: #005a9c;
   color: white;
-  width: 100%;
+  width: 20%;
   border-radius: 24px;
   padding: 2rem;
+  min-width: 170px;
+  /* margin: auto 5%; */
 }
 
 .card a {
@@ -40,4 +41,16 @@ a {
 main h1,
 h2 {
   text-align: center;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 600px) {
+  .cards {
+    flex-flow: column wrap;
+  }
+
+  .card {
+    width: auto;
+  }
 }
