--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,37 +1,38 @@
 /* @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap'); */
 
 @font-face {
-  font-family: 'Atkinson Hyperlegible';
-  src: url('../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Regular.woff2') format('woff2');
+  font-family: "Atkinson Hyperlegible";
+  src: url("../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Regular.woff2")
+    format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Atkinson Hyperlegible Bold';
-  src: url('../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Bold.woff2') format('woff2');
+  font-family: "Atkinson Hyperlegible Bold";
+  src: url("../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Bold.woff2")
+    format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 
-  
 :root {
-  --color-primary: #005A9C;      /* Bleu accessible */
-  --color-secondary: #D6EAF8;    /* Bleu clair (header/footer) */
-  --color-white: #FFFFFF;
+  --color-primary: #005a9c; /* Bleu accessible */
+  --color-secondary: #d6eaf8; /* Bleu clair (header/footer) */
+  --color-white: #ffffff;
   --color-black: #000000;
 
-  --font-base: 'Atkinson Hyperlegible', sans-serif;
-  --font-bold: 'Atkinson Hyperlegible Bold', sans-serif;
+  --font-base: "Atkinson Hyperlegible", sans-serif;
+  --font-bold: "Atkinson Hyperlegible Bold", sans-serif;
 
-  --text-h1: 2.5rem;   /* 40px */
-  --text-h2: 2rem;     /* 32px */
-  --text-h3: 1.5rem;   /* 24px */
-  --text-h4: 1.25rem;  /* 20px */
-  --text-h5: 1.25rem;  /* 20px */
-  --text-body: 1rem;   /* 16px */
+  --text-h1: 2.5rem; /* 40px */
+  --text-h2: 2rem; /* 32px */
+  --text-h3: 1.5rem; /* 24px */
+  --text-h4: 1.25rem; /* 20px */
+  --text-h5: 1.25rem; /* 20px */
+  --text-body: 1rem; /* 16px */
 
   --lh-default: 1.5rem; /* 24px */
 }
@@ -48,7 +49,7 @@ html {
 }
 
 body {
-  font-family: 'Atkinson Hyperlegible', sans-serif;
+  font-family: "Atkinson Hyperlegible", sans-serif;
   font-size: var(--text-body);
   line-height: var(--lh-default);
   background-color: var(--color-white);
@@ -76,7 +77,8 @@ h3 {
   margin-bottom: 0.5rem;
 }
 
-h4, h5 {
+h4,
+h5 {
   font-size: var(--text-h4);
   line-height: var(--lh-default);
   font-weight: 300;
@@ -103,7 +105,7 @@ header {
   background-color: var(--color-secondary);
   color: var(--color-black);
   padding: 2rem;
-  border-bottom: 2px solid #005A9C;
+  border-bottom: 2px solid #005a9c;
 }
 
 p + p {
@@ -115,7 +117,6 @@ body {
   word-spacing: 0.16em;
 }
 
-
 .container {
   margin: 0 auto;
   padding: 0 0rem;
@@ -123,24 +124,24 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
+  flex-direction: row;
 }
-
 
 .nav ul {
   color: #000000;
   list-style: none;
   margin: 0;
   padding: 0;
-  
+
   display: flex;
   gap: 1.5rem;
   align-items: center;
 }
 
-.nav a{
+.nav a {
   color: #000000;
   font-size: var(--text-h3);
-
 }
 
 /*logo*/
@@ -149,7 +150,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
 .site-subtitle {
@@ -169,27 +169,27 @@ body {
 
 .logo {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
+  color: inherit;
+  /* width: 100%; */
 }
 
-
-footer{
-  height: 256px;
+footer {
   width: 100%;
   background-color: var(--color-secondary);
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
   border-top: 2px solid var(--color-primary);
   font-size: var(--text-h3);
-  font-family: 'Atkinson Hyperlegible', sans-serif;
-  padding: 0 2rem;
-  
+  font-family: "Atkinson Hyperlegible", sans-serif;
+  padding: 2rem;
+  gap: 50px;
 }
 
-.footer-lien{
+.footer-lien {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -200,7 +200,7 @@ footer{
   flex-wrap: wrap;
 }
 
-footer a{
+footer a {
   color: var(--color-black);
   text-decoration: none;
 }
@@ -217,7 +217,7 @@ footer ul {
   align-items: center;
 }
 
-.logo-container{
+.logo-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -241,30 +241,20 @@ footer ul {
 .footer-logo {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: column;
-}
-
-@media screen and (max-width: 850px) {
-  footer {
-      flex-direction: column;
-      height: 350px;
-  }
-
-  .footer-lien{
-      width: 100%;
-  }
+  gap: 5px;
 }
 
 /* description_card */
-.description_card_border{
+.description_card_border {
   padding: 1rem;
   border: 2px solid var(--color-primary);
   border-radius: 24px;
   display: flex;
   flex-direction: row;
   gap: 20px;
-  align-items: center
+  align-items: center;
 }
 .description_card_content {
   display: flex;
@@ -276,15 +266,15 @@ footer ul {
 /* section_card */
 
 .section-container {
-  background-color: #005A9C;
-  color: #FFFFFF;
+  background-color: #005a9c;
+  color: #ffffff;
   width: 100%;
   border-radius: 24px;
   padding: 1rem;
 }
 
 .section-icon {
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .section-content {
@@ -297,4 +287,48 @@ footer ul {
 .section-text {
   width: 100%;
   text-align: center;
+}
+
+@media screen and (max-width: 750px) {
+  header {
+    padding: 1rem;
+  }
+
+  footer {
+    flex-direction: column;
+    gap: 20px;
+    padding: 1rem;
+    align-items: flex-start;
+  }
+
+  .logo {
+    width: 100%;
+  }
+
+  .container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .footer-lien {
+    /* width: 100%; */
+    height: unset;
+  }
+
+  .nav {
+    width: 100%;
+  }
+
+  .nav ul {
+    flex-direction: column;
+  }
+
+  .nav ul li {
+    width: 100%;
+    text-align: end;
+  }
+
+  .description_card_border {
+    flex-direction: column;
+  }
 }
