add matin page and start soir page, to continue

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -289,6 +289,17 @@ footer ul {
   text-align: center;
 }
 
+.section-actions {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.principal {
+  display: flex;
+  gap: 2rem;
+}
+
 @media screen and (max-width: 750px) {
   header {
     padding: 1rem;
