fix css; add favicon; rm unused

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -10,9 +10,9 @@
 
     <nav class="nav" aria-label="Navigation principale">
       <ul>
-        <li><a href="#matin">Le matin</a></li>
-        <li><a href="#apres-midi">L'après-midi</a></li>
-        <li><a href="#soir">Le soir</a></li>
+        <li><a href="/matin.html">Le matin</a></li>
+        <li><a href="/apres-midi.html">L'après-midi</a></li>
+        <li><a href="/soir.html">Le soir</a></li>
       </ul>
     </nav>
   </div>
