--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Arial, sans-serif;
   background-color: #f0f2f5;
@@ -47,7 +46,8 @@ h2 {
   text-align: center;
 }
 
-.principal h1, .principal h2 {
+.principal h1,
+.principal h2 {
   text-align: left;
 }
 
