--- a/src/css/base.css
+++ b/src/css/base.css
@@ -2,8 +2,7 @@
 
 @font-face {
   font-family: "Atkinson Hyperlegible";
-  src: url("../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Regular.woff2")
-    format("woff2");
+  src: url("../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -11,8 +10,7 @@
 
 @font-face {
   font-family: "Atkinson Hyperlegible Bold";
-  src: url("../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Bold.woff2")
-    format("woff2");
+  src: url("../assets/fonts/Atkinson_Hyperlegible/subset-AtkinsonHyperlegible-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -30,12 +28,18 @@
   --font-base: "Atkinson Hyperlegible", sans-serif;
   --font-bold: "Atkinson Hyperlegible Bold", sans-serif;
 
-  --text-h1: 2.5rem; /* 40px */
-  --text-h2: 2rem; /* 32px */
-  --text-h3: 1.5rem; /* 24px */
-  --text-h4: 1.25rem; /* 20px */
-  --text-h5: 1.25rem; /* 20px */
-  --text-body: 1rem; /* 16px */
+  --text-h1: 2.5rem;
+  /* 40px */
+  --text-h2: 2rem;
+  /* 32px */
+  --text-h3: 1.5rem;
+  /* 24px */
+  --text-h4: 1.25rem;
+  /* 20px */
+  --text-h5: 1.25rem;
+  /* 20px */
+  --text-body: 1rem;
+  /* 16px */
 
   --lh-default: 1.5em;
   /* 24px */
@@ -113,13 +117,18 @@ header {
   border-bottom: 2px solid #005a9c;
 }
 
-p + p {
+p+p {
   margin-top: 2rem;
 }
 
 body {
   letter-spacing: 0.02em;
   word-spacing: 0.16em;
+}
+
+.site-header {
+  display: flex;
+  justify-content: flex-start;
 }
 
 .container {
@@ -131,6 +140,10 @@ body {
   align-items: center;
   gap: 10px;
   flex-direction: row;
+}
+
+nav {
+  left: auto;
 }
 
 .nav ul {
