--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,7 +3,8 @@ body {
   background-color: #f0f2f5;
   margin: 0;
   padding: 0;
-  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 main {
@@ -11,6 +12,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  flex: 1;
 }
 
 .cards {
