--- a/src/css/base.css
+++ b/src/css/base.css
@@ -110,15 +110,7 @@ header {
   color: var(--color-black);
   padding: 2rem;
   border-bottom: 2px solid #005a9c;
-}
-
-p + p {
-  margin-top: 2rem;
-}
-
-header .container {
-  margin: 0 auto;
-  padding: 0 0rem;
+  margin: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -126,16 +118,12 @@ header .container {
   flex-direction: row;
 }
 
-footer .container {
-  padding: 0 0rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  gap: 10px;
+p + p {
+  margin-top: 2rem;
 }
 
 .nav ul {
+
   color: #000000;
   list-style: none;
   margin: 0;
@@ -184,29 +172,41 @@ p.site-name {
   align-items: center;
 }
 
+ 
+
 footer {
   width: 100%;
   background-color: var(--color-secondary);
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
+  background-color: #d6eaf8;
+  margin: 0;
+  padding: 1rem 2rem;
   border-top: 2px solid var(--color-primary);
-  font-size: var(--text-h3);
-  font-family: "Atkinson Hyperlegible", sans-serif;
-  padding: 2rem;
-  gap: 50px;
+  border-top-color: #005a9c;
+
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: repeat(2, auto);
+  justify-content: start;
+  align-items: start;
+  row-gap: 0 ;
+  column-gap: 50px;
 }
 
-.footer-lien {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  text-align: center;
-  gap: 18px;
-  width: 70%;
-  height: 140px;
-  flex-wrap: wrap;
+footer > a {
+  grid-column: 1 / 2 ;
+  grid-row: 1 / 2 ;
+}
+
+footer > ul {
+  grid-column: 2 / 3 ;
+  grid-row: 1 / 2 ;
+  font-size: var(--text-h3);
+}
+
+footer > p{
+  grid-column: 1 / 3 ;
+  grid-row: 2 / 3 ;
+  justify-self: center;
 }
 
 footer a {
@@ -216,6 +216,17 @@ footer a {
 
 footer ul {
   list-style-type: none;
+}
+
+.footer-lien {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  text-align: left;
+  gap: 18px;
+  width: 70%;
+  height: 140px;
+  flex-wrap: wrap;
 }
 
 /*logo*/
@@ -250,34 +261,39 @@ footer ul {
   gap: 5px;
 }
 
-@media screen and (max-width: 850px) {
-  footer {
-    flex-direction: column;
-    height: 350px;
-  }
 
-  .footer-lien {
-    width: 100%;
-  }
-}
 
 /* description_card */
-.description_card_border {
-  padding: 1rem;
-  border: 2px solid var(--color-primary);
-  border-radius: 24px;
-  display: flex;
-  flex-direction: row;
+.advice {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto;
   gap: 20px;
-  align-items: center;
+  align-items: start;
+  padding: 1rem;
+  border-radius: 24px;
+  border: 2px solid var(--color-primary);
+  border-top-color: #005a9c;
 }
 
-.description_card_content {
-  display: flex;
-  flex-direction: column;
+.advice > svg {
+  grid-column: 1 / 2 ;
+  grid-row: 1 / 3 ;
   width: 100%;
-  gap: 20px;
+  align-self: center;
+  display: inline-block;
 }
+
+.advice > h2 {
+  grid-column: 2 / 3 ;
+  grid-row: 1 / 2 ;
+}
+
+.advice > p {
+  grid-column: 2 / 3 ;
+  grid-row: 2 / 3 ;
+}
+
 
 /* section_card */
 
@@ -287,6 +303,10 @@ footer ul {
   width: 100%;
   border-radius: 24px;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .section-icon {
@@ -323,23 +343,35 @@ footer ul {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 450px) {
+  footer {
+    grid-template-columns: 1fr;
+    grid-template-rows:  auto auto auto;
+    row-gap: 30px;
+  }
+  
+  footer > ul {
+    grid-column: 1 / 2 ;
+    grid-row: 2 / 3;
+  }
+  
+  footer > p{
+    grid-column: 1 / 2 ;
+    grid-row: 3 / 4 ;
+   }
+  
+}
+
 @media screen and (max-width: 750px) {
   header {
     padding: 1rem;
-  }
-
-  footer {
-    flex-direction: column;
-    gap: 20px;
-    padding: 2rem ;
-    align-items: flex-start;
   }
 
   .logo {
     width: 100%;
   }
 
-  header .container {
+  header{
     flex-direction: column;
     gap: 20px;
   }
@@ -362,8 +394,27 @@ footer ul {
     text-align: end;
   }
 
-  .description_card_border {
-    flex-direction: column;
+  .advice {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, auto);
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .advice > svg {
+    grid-column: 1 / 2 ;
+    grid-row: 1 / 2 ;
+  }
+  
+  .advice > h2 {
+    grid-column: 1 / 2 ;
+    grid-row: 2 / 3 ;
+    text-align: center !important;
+  }
+  .advice > p {
+    grid-column: 1 / 2 ;
+    grid-row: 3 / 4 ;
+    text-align: center;
   }
 
   h1 {
