--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <footer>
-        <div class="footer-logo">
-          <a href="./index.html" class="logo-container">
-            <img
-              aria-hidden="true"
-              class="logo-icon"
-              src="../assets/svg/hand-holding-heart-solid.svg"
-              alt="logo"
-            />
-            <div class="site-name">
-              <span class="site-title">Mon Petit</span>
-              <span class="site-subtitle">Geste</span>
-            </div>
-          </a>
-          <p>2025 © Kyongsong</p>
-        </div>
+        <a href="./index.html" class="logo">
+          <img
+            aria-hidden="true"
+            class="logo-icon"
+            src="../assets/svg/hand-holding-heart-solid.svg"
+            alt="logo"
+          />
+          <p class="site-name">
+            <span class="site-title">Mon Petit</span>
+            <strong class="site-subtitle">Geste</strong>
+          </p>
+        </a>
+      
         <ul class="footer-lien" role="navigation" aria-label="pied de page">
           <li><a href="./matin.html">Le matin</a></li>
           <li><a href="./apres-midi.html">L'après midi</a></li>
           <li><a href="./soir.html">Le soir</a></li>
           <li><a href="#">Nous contacter</a></li>
-          <li><a href="#">Mentions légals</a></li>
+          <li><a href="#">Mentions légales</a></li>
         </ul>
+  
+        <p>2025 © Kyongsong</p>
       </footer>
 </body>
 </html>
