--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,19 +1,21 @@
-<header class="site-header">
-  <div class="container">
-    <div class="logo">
-      <img class="logo-icon" src="assets/images/hand-holding-heart-solid.svg" alt="logo"></img>
-      <div class="site-name">
-        <span class="site-title">Mon Petit</span>
-        <span class="site-subtitle">Geste</span>
-      </div>
-    </div>
+<header>
+  <a href="./index.html"  class="logo">
+    <img
+      class="logo-icon"
+      src="../assets/svg/hand-holding-heart-solid.svg"
+      alt="logo"
+    />
+    <p class="site-name">
+      <span class="site-title">Mon Petit</span>
+      <strong class="site-subtitle">Geste</strong>
+    </p>
+  </a>
 
-    <nav class="nav" aria-label="Navigation principale">
-      <ul>
-        <li><a href="./matin.html">Le matin</a></li>
-        <li><a href="./apres-midi.html">L'après-midi</a></li>
-        <li><a href="./soir.html">Le soir</a></li>
-      </ul>
-    </nav>
-  </div>
+  <nav class="nav" aria-label="Navigation principale">
+    <ul>
+      <li><a href="./matin.html">Le matin</a></li>
+      <li><a href="./apres-midi.html">L'après-midi</a></li>
+      <li><a href="./soir.html">Le soir</a></li>
+    </ul>
+  </nav>
 </header>
