--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,8 +27,8 @@
 
   --color-black: #000000;
 
-  --font-base: "Atkinson Hyperlegible", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  --font-base: "Atkinson Hyperlegible", system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
   --text-h1: 2.5rem; /* 40px */
   --text-h2: 2rem; /* 32px */
@@ -123,7 +123,6 @@ p + p {
 }
 
 .nav ul {
-
   color: #000000;
   list-style: none;
   margin: 0;
@@ -172,8 +171,6 @@ p.site-name {
   align-items: center;
 }
 
- 
-
 footer {
   width: 100%;
   background-color: var(--color-secondary);
@@ -188,24 +185,24 @@ footer {
   grid-template-rows: repeat(2, auto);
   justify-content: start;
   align-items: start;
-  row-gap: 0 ;
+  row-gap: 0;
   column-gap: 50px;
 }
 
 footer > a {
-  grid-column: 1 / 2 ;
-  grid-row: 1 / 2 ;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
 }
 
 footer > ul {
-  grid-column: 2 / 3 ;
-  grid-row: 1 / 2 ;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
   font-size: var(--text-h3);
 }
 
-footer > p{
-  grid-column: 1 / 3 ;
-  grid-row: 2 / 3 ;
+footer > p {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
   justify-self: center;
 }
 
@@ -235,7 +232,7 @@ footer ul {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color:black
+  color: black;
 }
 
 .site-subtitle {
@@ -261,8 +258,6 @@ footer ul {
   gap: 5px;
 }
 
-
-
 /* description_card */
 .advice {
   display: grid;
@@ -277,23 +272,22 @@ footer ul {
 }
 
 .advice > svg {
-  grid-column: 1 / 2 ;
-  grid-row: 1 / 3 ;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
   width: 100%;
   align-self: center;
   display: inline-block;
 }
 
 .advice > h2 {
-  grid-column: 2 / 3 ;
-  grid-row: 1 / 2 ;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
 
 .advice > p {
-  grid-column: 2 / 3 ;
-  grid-row: 2 / 3 ;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
-
 
 /* section_card */
 
@@ -343,23 +337,44 @@ footer ul {
   margin: 0 auto;
 }
 
+.mentions-legales h1 {
+  margin-bottom: 1rem;
+  text-align: start;
+}
+
+.mentions-legales p + p {
+  margin-top: 0.5rem;
+}
+
+.mentions-legales {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  max-width: 850px;
+  margin: 0 auto;
+}
+
+.mentions-legales a {
+  color: #005a9c;
+  color: var(--color-primary);
+}
+
 @media screen and (max-width: 450px) {
   footer {
     grid-template-columns: 1fr;
-    grid-template-rows:  auto auto auto;
+    grid-template-rows: auto auto auto;
     row-gap: 30px;
   }
-  
+
   footer > ul {
-    grid-column: 1 / 2 ;
+    grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
-  
-  footer > p{
-    grid-column: 1 / 2 ;
-    grid-row: 3 / 4 ;
-   }
-  
+
+  footer > p {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
 }
 
 @media screen and (max-width: 750px) {
@@ -367,11 +382,18 @@ footer ul {
     padding: 1rem;
   }
 
+  footer {
+    flex-direction: column;
+    gap: 20px;
+    padding: 2rem;
+    align-items: flex-start;
+  }
+
   .logo {
     width: 100%;
   }
 
-  header{
+  header {
     flex-direction: column;
     gap: 20px;
   }
@@ -400,20 +422,20 @@ footer ul {
     justify-content: center;
     align-items: center;
   }
-  
+
   .advice > svg {
-    grid-column: 1 / 2 ;
-    grid-row: 1 / 2 ;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
-  
+
   .advice > h2 {
-    grid-column: 1 / 2 ;
-    grid-row: 2 / 3 ;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
     text-align: center !important;
   }
   .advice > p {
-    grid-column: 1 / 2 ;
-    grid-row: 3 / 4 ;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
     text-align: center;
   }
 
