--- a/src/css/base.css
+++ b/src/css/base.css
@@ -53,7 +53,6 @@
 
 html {
   font-size: 100%;
-  /* 1rem = 16px */
   line-height: var(--lh-default);
 }
 
@@ -69,7 +68,6 @@ h1 {
   font-size: var(--text-h1);
   line-height: var(--lh-default);
   font-weight: 700;
-  /* margin-bottom: 1rem; */
 }
 
 h2 {
@@ -97,8 +95,6 @@ h5 {
 p {
   font-size: var(--text-body);
   line-height: var(--lh-default);
-  /* margin-bottom: 1.5rem; */
-  /* max-width: 65ch; */
 }
 
 a {
@@ -111,10 +107,20 @@ a:focus {
 }
 
 header {
-  background-color: var(--color-secondary);
+  display: flex;
   color: var(--color-black);
+  justify-content: space-between;
+  align-items: center;
   padding: 2rem;
-  border-bottom: 2px solid #005a9c;
+  background-color: var(--color-secondary)
+}
+
+.branding {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+  gap: 0.5rem;
 }
 
 p+p {
@@ -124,11 +130,6 @@ p+p {
 body {
   letter-spacing: 0.02em;
   word-spacing: 0.16em;
-}
-
-.site-header {
-  display: flex;
-  justify-content: flex-start;
 }
 
 .container {
@@ -144,6 +145,9 @@ body {
 
 nav {
   left: auto;
+  display: none;
+  flex-direction: column;
+
 }
 
 .nav ul {
@@ -162,12 +166,25 @@ nav {
   font-size: var(--text-h3);
 }
 
+.menu-toggle {
+  display: block;
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+
+/* Quand le menu est ouvert */
+.menu-open nav {
+  display: flex;
+}
+
 /*logo*/
 .site-name {
   font-size: var(--text-h3);
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #000000;
 }
 
 .site-subtitle {
@@ -190,7 +207,6 @@ nav {
   justify-content: flex-start;
   align-items: center;
   color: inherit;
-  /* width: 100%; */
 }
 
 footer {
@@ -338,6 +354,19 @@ footer ul {
   margin: 0 auto;
 }
 
+@media screen and (min-width: 430px) {
+  .menu-toggle {
+    display: none;
+    /* Cacher le burger en desktop */
+  }
+
+  nav {
+    display: flex !important;
+    flex-direction: row;
+    background-color: transparent;
+  }
+}
+
 @media screen and (max-width: 750px) {
   header {
     padding: 1rem;
@@ -360,7 +389,6 @@ footer ul {
   }
 
   .footer-lien {
-    /* width: 100%; */
     height: unset;
   }
 
