--- a/src/css/base.css
+++ b/src/css/base.css
@@ -20,13 +20,11 @@
 
 :root {
   --color-primary: #005a9c;
-  /* Bleu accessible */
   --color-secondary: #d6eaf8;
-  /* Bleu clair (header/footer) */
   --color-white: #ffffff;
-
   --color-black: #000000;
 
+  --font-base: "Atkinson Hyperlegible", system-ui, -apple-system, BlinkMacSystemFont,"Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
   --font-base: "Atkinson Hyperlegible", system-ui, -apple-system,
     BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 
@@ -38,7 +36,6 @@
   --text-body: 1rem; /* 16px */
 
   --lh-default: 1.5em;
-  /* 24px */
 }
 
 * {
@@ -61,12 +58,16 @@ body {
   min-height: 100vh;
   letter-spacing: 0.02em;
   word-spacing: 0.16em;
+  
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
   font-size: var(--text-h1);
   line-height: var(--lh-default);
   font-weight: 700;
+  text-align: left;
 }
 
 h2 {
@@ -74,6 +75,7 @@ h2 {
   line-height: var(--lh-default);
   font-weight: 700;
   margin-bottom: 0.75rem;
+  text-align: left;
 }
 
 h3 {
@@ -100,10 +102,11 @@ a {
   text-decoration: none;
 }
 
-a:focus {
+a:focus, [tabindex]:focus {
   outline: 3px solid var(--color-primary);
   outline-offset: 4px;
 }
+
 
 header {
   background-color: var(--color-secondary);
@@ -326,6 +329,55 @@ footer ul {
   width: 100%;
 }
 
+
+/* Index */
+.home {
+  flex: 1;
+  margin: 2rem;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.home h1, .home h2{
+  text-align: center;
+}
+
+.cards {
+  flex:1;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  height: 100%;
+}
+
+.card{
+  width: 100%; 
+  display: flex;
+  justify-content: center;
+}
+
+.card a {
+  display: inline-block;
+  background-color: #005a9c;
+  color: white;
+  width: 80%;
+  border-radius: 24px;
+  padding: 2rem;
+  min-width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card h3 {
+  font-weight: 400;
+}
+
+
+/* Moment */
 .principal {
   display: flex;
   gap: 2rem;
@@ -334,7 +386,11 @@ footer ul {
   align-content: center;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 2rem auto;
+}
+
+.principal h2 {
+  margin-bottom: unset;
 }
 
 .mentions-legales h1 {
@@ -440,6 +496,13 @@ footer ul {
   }
 
   h1 {
-    font-size: var(--text-h3);
+    font-size: 2rem ;
+  }
+  h2 {
+    font-size: 1.5rem ;
+  }
+  
+  .cards {
+    flex-flow: column wrap;
   }
 }
