--- a/src/css/base.css
+++ b/src/css/base.css
@@ -107,7 +107,6 @@ a:focus, [tabindex]:focus {
   outline-offset: 4px;
 }
 
-
 header {
   background-color: var(--color-secondary);
   color: var(--color-black);
@@ -119,7 +118,31 @@ header {
   align-items: center;
   gap: 10px;
   flex-direction: row;
+
+  display: grid;
+  grid-template-columns: auto auto 1fr;
+  justify-content: start;
+  align-items: start;
+  gap: 0;
 }
+
+header > a {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+header > h1 {
+  grid-column: 2 /3;
+  grid-row: 1 / 2;
+}
+
+header > nav {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  align-self: center;
+  justify-self: end;
+}
+
 
 p + p {
   margin-top: 2rem;
@@ -184,12 +207,11 @@ footer {
   border-top-color: #005a9c;
 
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: auto auto 1fr;
   grid-template-rows: repeat(2, auto);
   justify-content: start;
   align-items: start;
-  row-gap: 0;
-  column-gap: 50px;
+  gap: 0;
 }
 
 footer > a {
@@ -197,14 +219,20 @@ footer > a {
   grid-row: 1 / 2;
 }
 
-footer > ul {
-  grid-column: 2 / 3;
+footer > h1 {
+  grid-column: 2 /3;
   grid-row: 1 / 2;
+}
+
+footer > nav {
+  grid-column: 3 / 4;
+  grid-row: 1 / 2;
+  margin-left: 50px;
   font-size: var(--text-h3);
 }
 
 footer > p {
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   grid-row: 2 / 3;
   justify-self: center;
 }
@@ -415,6 +443,25 @@ footer ul {
   color: var(--color-primary);
 }
 
+.skip-link {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+.skip-link:focus {
+  left: 0;
+  top: 0;
+  width: auto;
+  height: auto;
+  padding: 1em;
+  background: #000;
+  color: #fff;
+  z-index: 1000;
+}
+
 @media screen and (max-width: 450px) {
   footer {
     grid-template-columns: 1fr;
@@ -422,7 +469,7 @@ footer ul {
     row-gap: 30px;
   }
 
-  footer > ul {
+  footer > nav {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
@@ -433,23 +480,20 @@ footer ul {
   }
 }
 
-@media screen and (max-width: 750px) {
-  header {
-    padding: 1rem;
-  }
-
+@media screen and (max-width: 750px) {  
   footer {
     flex-direction: column;
     gap: 20px;
     padding: 2rem;
     align-items: flex-start;
   }
-
+  
   .logo {
     width: 100%;
   }
-
+  
   header {
+    padding: 1rem;
     flex-direction: column;
     gap: 20px;
   }
